Update library dependencies (#7)